--- a/main.html
+++ b/main.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pinterest Hero Section</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <div class="hero">
+        <div class="hero-content">
+            <h1>Discover Endless Inspiration</h1>
+            <p>Explore a world of creative ideas, beautiful designs, and fresh perspectives.</p>
+            <a href="#" class="explore-btn">Explore Now</a>
+        </div>
+        <img src="https://source.unsplash.com/800x500/?nature,art" alt="Pinterest-style hero image">
+    </div>
 
 </body>
-
 </html>
